--- a/index.html
+++ b/index.html
@@ -26,64 +26,64 @@
 			<td>2 </td>
 			<td>Karnataka </td>
 			<td>Bangalore</td>
-			<td>Roller<br><img src="roller.jpg" alt="Taj Mahal" height=50width=50>  </td>
-			<td>Elephant<br><img src="elephant.jpg" alt="Taj Mahal" height=50width=50> </td>
+			<td>Roller<br><img src="roller.jpg" alt="Roller" height=50width=50>  </td>
+			<td>Elephant<br><img src="elephant.jpg" alt="Elephant" height=50width=50> </td>
 		</tr>
 		<tr>
 			<td>3 </td>
 			<td>Kerala </td>
 			<td>Thiruvananthapuram</td>
 			<td>Great Indian hornbill<br><img src="hornbill.jpg" alt="Taj Mahal" height=50width=50></td>
-			<td>Elephant<br><img src="elephant.jpg" alt="Taj Mahal" height=50width=50> </td>
+			<td>Elephant<br><img src="elephant.jpg" alt="Elephant" height=50width=50> </td>
 		</tr>	
 		<tr>
 			<td> 4 </td>
 			<td>West Bengal </td>
 			<td> Kolkata </td>
-			<td>White-breasted kingfisher <br> <img src="kingfisher.jpg" alt="Taj Mahal" height=50width=50></td>
-			<td>Fishing Cats<br><img src="cat.jpg" alt="Taj Mahal" height=50width=50></td>
+			<td>White-breasted kingfisher <br> <img src="kingfisher.jpg" alt="White-breasted kingfisher" height=50width=50></td>
+			<td>Fishing Cats<br><img src="cat.jpg" alt="Fishing Cats" height=50width=50></td>
 		</tr>
 		<tr>
 			<td> 5 </td>
 			<td>Maharashtra </td>
 			<td>Mumbai </td>
-			<td>Yellow footed green pigeon<br><img src="pigeon.jpg" alt="Taj Mahal" height=50width=50></td>
-			<td>Giant squirrel<br><img src="squrril.jpg" alt="Taj Mahal" height=50width=50></td>
+			<td>Yellow footed green pigeon<br><img src="pigeon.jpg" alt="Yellow footed green pigeon" height=50width=50></td>
+			<td>Giant squirrel<br><img src="squrril.jpg" alt="Giant squirrel" height=50width=50></td>
 		</tr>		
 		<tr>
 			<td> 6 </td>
 			<td>Telangana </td>
 			<td>Hyderabad </td>
-			<td>Palapitta<br><img src="palapitta.jpg" alt="Taj Mahal" height=50width=50></td>
-			<td>Jinka <br><img src="jinka.jpg" alt="Taj Mahal" height=50width=50></td>
+			<td>Palapitta<br><img src="palapitta.jpg" alt="Palapitta" height=50width=50></td>
+			<td>Jinka <br><img src="jinka.jpg" alt="Jinka" height=50width=50></td>
 		</tr>		
 		<tr>
 			<td> 7 </td>
 			<td>Andhra pradesh </td>
 			<td> Amravati </td>
-			<td>Rose-ringed parakeet<br><img src="parakeet.jpg" alt="Taj Mahal" height=50width=50></td>
-			<td>Black buck<br><img src="buck.jpg" alt="Taj Mahal" height=50width=50></td>
+			<td>Rose-ringed parakeet<br><img src="parakeet.jpg" alt="Rose-ringed parakeet" height=50width=50></td>
+			<td>Black buck<br><img src="buck.jpg" alt="Black buck" height=50width=50></td>
 		</tr>		
 		<tr>
 			<td> 8 </td>
 			<td>Madhya Pradesh </td>
 			<td>Bhopal</td>
-			<td>Indian paradise flycatcher<br><img src="flycatcher.jpg" alt="Taj Mahal" height=50width=50></td>
-			<td>Barasingha<br><img src="barasingha.jpg" alt="Taj Mahal" height=50width=50></td>
+			<td>Indian paradise flycatcher<br><img src="flycatcher.jpg" alt="Indian paradise flycatcher" height=50width=50></td>
+			<td>Barasingha<br><img src="barasingha.jpg" alt="Barasingha" height=50width=50></td>
 		</tr>		
 		<tr>
 			<td> 9 </td>
 			<td>Sikkim </td>
 			<td>Gangtok</td>
-			<td>Blood pheasant<br><img src="pheasant.jpg" alt="Taj Mahal" height=50width=50></td>
-			<td>Red Panda<br><img src="panda.jpg" alt="Taj Mahal" height=50width=50></td>
+			<td>Blood pheasant<br><img src="pheasant.jpg" alt="Blood pheasant" height=50width=50></td>
+			<td>Red Panda<br><img src="panda.jpg" alt="Red Panda" height=50width=50></td>
 		</tr>		
 		<tr>
 			<td> 10 </td>
 			<td>Mizoram</td>
 			<td>Aizwal</td>
-			<td>Hume's Pheasant<br><img src="hume.jpg" alt="Taj Mahal" height=50width=50></td>
-			<td>Serow<br><img src="serow.jpg" alt="Taj Mahal" height=50width=50></td>
+			<td>Hume's Pheasant<br><img src="hume.jpg" alt="Hume's Pheasant" height=50width=50></td>
+			<td>Serow<br><img src="serow.jpg" alt="Serow" height=50width=50></td>
 		</tr>		
 		
 	</body>
