--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<td>Tamil Nadu </td>
 			<td>Chennai </td>
 			<td>Emerald Dove  <br><img src="Dove.jpg" alt="Emerald Dove" height=50width=50></td>
-			<td>Nilgiri tahr   <br><img src="nilgiri.jpg" alt="Nilgiri tahr" height=50width=50> </td>
+			<td>Nilgiri tahr<br><img src="Nilgiri.jpg" alt="Nilgiri tahr" height=50width=50> </td>
 		</tr>	
 		<tr>
 			<td>2 </td>
