--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<td>2 </td>
 			<td>Karnataka </td>
 			<td>Bangalore</td>
-			<td>Roller<br><img src="roller.jpg" alt="Roller" height=50width=50>  </td>
+			<td>Roller<br><img src="Roller.jpg" alt="Roller" height=50width=50>  </td>
 			<td>Elephant<br><img src="elephant.jpg" alt="Elephant" height=50width=50> </td>
 		</tr>
 		<tr>
@@ -54,7 +54,7 @@
 			<td> 6 </td>
 			<td>Telangana </td>
 			<td>Hyderabad </td>
-			<td>Palapitta<br><img src="palapitta.jpg" alt="Palapitta" height=50width=50></td>
+			<td>Palapitta<br><img src="Palapitta.jpg" alt="Palapitta" height=50width=50></td>
 			<td>Jinka <br><img src="jinka.jpg" alt="Jinka" height=50width=50></td>
 		</tr>		
 		<tr>
@@ -69,7 +69,7 @@
 			<td>Madhya Pradesh </td>
 			<td>Bhopal</td>
 			<td>Indian paradise flycatcher<br><img src="flycatcher.jpg" alt="Indian paradise flycatcher" height=50width=50></td>
-			<td>Barasingha<br><img src="barasingha.jpg" alt="Barasingha" height=50width=50></td>
+			<td>Barasingha<br><img src="Barasingha.jpg" alt="Barasingha" height=50width=50></td>
 		</tr>		
 		<tr>
 			<td> 9 </td>
@@ -83,7 +83,7 @@
 			<td>Mizoram</td>
 			<td>Aizwal</td>
 			<td>Hume's Pheasant<br><img src="hume.jpg" alt="Hume's Pheasant" height=50width=50></td>
-			<td>Serow<br><img src="serow.jpg" alt="Serow" height=50width=50></td>
+			<td>Serow<br><img src="Serow.jpg" alt="Serow" height=50width=50></td>
 		</tr>		
 		
 	</body>
