--- a/index.html
+++ b/index.html
@@ -15,70 +15,70 @@
 			<th> State Bird </th>
 			<th> State Animal </th>
 		</tr>
-		<tr>
+		<tr align=center>
 			<td>1 </td>
 			<td>Tamil Nadu </td>
 			<td>Chennai </td>
 			<td>Emerald Dove  <br><img src="Dove.jpg" alt="Emerald Dove" height=50width=50></td>
 			<td>Nilgiri tahr<br><img src="Nilgiri.jpg" alt="Nilgiri tahr" height=50width=50> </td>
 		</tr>	
-		<tr>
+		<tr align=center>
 			<td>2 </td>
 			<td>Karnataka </td>
 			<td>Bangalore</td>
 			<td>Roller<br><img src="Roller.jpg" alt="Roller" height=50width=50>  </td>
 			<td>Elephant<br><img src="elephant.jpg" alt="Elephant" height=50width=50> </td>
 		</tr>
-		<tr>
+		<tr align=center>
 			<td>3 </td>
 			<td>Kerala </td>
 			<td>Thiruvananthapuram</td>
 			<td>Great Indian hornbill<br><img src="hornbill.jpg" alt="Taj Mahal" height=50width=50></td>
 			<td>Elephant<br><img src="elephant.jpg" alt="Elephant" height=50width=50> </td>
 		</tr>	
-		<tr>
+		<tr align=center>
 			<td> 4 </td>
 			<td>West Bengal </td>
 			<td> Kolkata </td>
 			<td>White-breasted kingfisher <br> <img src="kingfisher.jpg" alt="White-breasted kingfisher" height=50width=50></td>
 			<td>Fishing Cats<br><img src="cat.jpg" alt="Fishing Cats" height=50width=50></td>
 		</tr>
-		<tr>
+		<tr align=center>
 			<td> 5 </td>
 			<td>Maharashtra </td>
 			<td>Mumbai </td>
 			<td>Yellow footed green pigeon<br><img src="pigeon.jpg" alt="Yellow footed green pigeon" height=50width=50></td>
 			<td>Giant squirrel<br><img src="squrril.jpg" alt="Giant squirrel" height=50width=50></td>
 		</tr>		
-		<tr>
+		<tr align=center>
 			<td> 6 </td>
 			<td>Telangana </td>
 			<td>Hyderabad </td>
 			<td>Palapitta<br><img src="Palapitta.jpg" alt="Palapitta" height=50width=50></td>
 			<td>Jinka <br><img src="jinka.jpg" alt="Jinka" height=50width=50></td>
 		</tr>		
-		<tr>
+		<tr align=center>
 			<td> 7 </td>
 			<td>Andhra pradesh </td>
 			<td> Amravati </td>
 			<td>Rose-ringed parakeet<br><img src="parakeet.jpg" alt="Rose-ringed parakeet" height=50width=50></td>
 			<td>Black buck<br><img src="buck.jpg" alt="Black buck" height=50width=50></td>
 		</tr>		
-		<tr>
+		<tr align=center>
 			<td> 8 </td>
 			<td>Madhya Pradesh </td>
 			<td>Bhopal</td>
 			<td>Indian paradise flycatcher<br><img src="flycatcher.jpg" alt="Indian paradise flycatcher" height=50width=50></td>
 			<td>Barasingha<br><img src="Barasingha.jpg" alt="Barasingha" height=50width=50></td>
 		</tr>		
-		<tr>
+		<tr align=center>
 			<td> 9 </td>
 			<td>Sikkim </td>
 			<td>Gangtok</td>
 			<td>Blood pheasant<br><img src="pheasant.jpg" alt="Blood pheasant" height=50width=50></td>
 			<td>Red Panda<br><img src="panda.jpg" alt="Red Panda" height=50width=50></td>
 		</tr>		
-		<tr>
+		<tr align=center>
 			<td> 10 </td>
 			<td>Mizoram</td>
 			<td>Aizwal</td>
